examples/errors/type_errors/E0102_invalid_unary_op.hd
fn main(): void {
    let x = 42;
    let y = !x;
    return;
}
